--- a/realisation/frontend/src/App.css
+++ b/realisation/frontend/src/App.css
@@ -1,5 +1,5 @@
 
-.brief_container{
+/* .brief_container{
   display: flex;
 }
 
@@ -10,7 +10,7 @@
   background-color: rgba(82, 94, 90, 0.495);
   margin-left: 15px;
   padding: 20px;
-}
+} */
 /* .App {
   text-align: center;
 }
